file(GLOB JSON_SOURCES *.cpp)
file(GLOB JSON_HEADERS ${CMAKE_CURRENT_BINARY_DIR}/*.h *.h)

add_library(json SHARED ${JSON_SOURCES})
GENERATE_EXPORT_HEADER(json)
target_include_directories(json PUBLIC ${CMAKE_CURRENT_BINARY_DIR} .)

install(TARGETS json LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR})
install(FILES ${JSON_HEADERS} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/json)